apps/copyparty/overlays/nishir-tailnet/patch-sts-oidc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copyparty
spec:
  template:
    spec:
      volumes:
        - name: oidc-config
          secret:
            secretName: copyparty-oidc
