apps/copyparty/overlays/nishir-tailnet/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: copyparty
    tailscale.com/tags: tag:ftp
spec:
  loadBalancerClass: tailscale
