apps/copyparty/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: copyparty
      port:
        name: https
  tls:
    - hosts:
        - copyparty
  ingressClassName: tailscale
